@@ -13,6 +13,7 @@ Release:    v2014012411
 - Performance logging of curl calls (provided by Androgogic).
 - Fixes:
 	> Turnitin Assignment inbox can now be sorted by similarity score and grade.
+	> Hard errors changed to soft errors when the cron is run.
 
 ####################################################################################
 
